Alterações Layout Desktop

--- a/store/blocks/header/top-menu.jsonc
+++ b/store/blocks/header/top-menu.jsonc
@@ -78,6 +78,9 @@
     }
   },
   "menu-item#whats":{
+    "blocks":[
+      "vtex.menu@2.x:submenu#whatsInfo"
+    ],
     "props":{
       "id": "menu-item-whats",
       "type": "custom",
@@ -91,6 +94,41 @@
         "tagTitle": "Compre por Whatsapp",
         "text": "COMPRE NO WHATSAPP"
       }
+    }
+  },
+  "vtex.menu@2.x:submenu#whatsInfo":{
+    "children":[
+      "flex-layout.row#whatsTop"
+    ]
+  },
+  // "vtex.menu@2.x:menu#whatsTop":{
+  //   "children":[
+  //     "menu-item#whatsPhone"
+  //   ],
+  //   "props":{
+  //     "blockClass": "whatsPhone"
+  //   }
+  // },
+  // "menu-item#whatsPhone":{
+  //   "props":{
+  //     "text": "(41) 98728-1243"
+  //   }
+  // },
+
+
+  "flex-layout.row#whatsTop":{
+    "children":[
+      "flex-layout.col#whatsTop"
+    ]
+  },
+  "flex-layout.col#whatsTop":{
+    "children":[
+      "notification.bar#loko"
+    ]
+  },
+  "notification.bar#loko":{
+    "props":{
+      "content":"(41) 98728-1243"
     }
   },
   "menu-item#phone":{
