--- a/store/blocks/header/category-menu.jsonc
+++ b/store/blocks/header/category-menu.jsonc
@@ -24,7 +24,7 @@
       "highlight": false,
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Todos os Departamentos",
         "text": "Ver todos os departamentos"
@@ -56,7 +56,7 @@
     "props":{
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Desempenho Físico (Todos Dep)",
         "text": "Desempenho Físico"
@@ -67,7 +67,7 @@
     "props":{
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Beleza (Todos Dep)",
         "text": "Beleza"
@@ -89,7 +89,7 @@
     "props":{
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Qualidade (Todos Dep)",
         "text": "Qualidade de Vida"
@@ -100,7 +100,7 @@
     "props":{
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Vegano (Todos Dep)",
         "text": "Vegano & Glúten Free."
@@ -111,7 +111,7 @@
     "props":{
       "itemProps": {
         "type": "internal",
-        "href": "/apparel---accessories/clothing/",
+        "href": "",
         "noFollow": true,
         "tagTitle": "Novidades (Todos Dep)",
         "text": "Novidades"
