--- a/store/blocks/header/category-menu.jsonc
+++ b/store/blocks/header/category-menu.jsonc
@@ -26,7 +26,7 @@
         "type": "internal",
         "href": "",
         "noFollow": true,
-        "tagTitle": "Todos os Departamentos",
+        "tagTitle": "Ver todos os Departamentos",
         "text": "Ver todos os departamentos"
       }
     },
