--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -103,7 +103,8 @@
 
   "newsletter":{
     "props":{
-      "label": "Cadastre-se e receba nossas ofertas!"
+      "label": "Cadastre-se e receba nossas ofertas!",
+      "blockClass":"content-newsletter"
     }
   }
 }
