--- a/store/blocks/footer/footer.jsonc
+++ b/store/blocks/footer/footer.jsonc
@@ -33,7 +33,6 @@
   },
   "flex-layout.row#insideInstitutional":{
     "children":[
-
       "flex-layout.col#insideInstitutional1",
       "flex-layout.col#insideInstitutional2"
     ]
@@ -212,11 +211,50 @@
   // ----- MOBILE ----- //
   "footer-layout.mobile": {
     "children": [
-      "flex-layout.row#1-footer-mobile",
-      "flex-layout.row#2-footer-mobile"
+      "flex-layout.row#footer-mobile1",
+      "flex-layout.row#footer-mobile2"
     ]
   },
-  "flex-layout.row#2-footer-mobile": {
+  "flex-layout.row#footer-mobile1":{
+    "children":[
+      "flex-layout.col#linksFooter-left",
+      "flex-layout.col#linksFooter-right"
+    ]
+  },
+  "flex-layout.col#linksFooter-left":{
+    "children":[
+      "rich-text#link01",
+      "rich-text#link02"
+    ]
+  },
+  "flex-layout.col#linksFooter-right":{
+    "children":[
+      "rich-text#link07"
+    ]
+  },
+  "rich-text#link01":{
+    "props":{
+      "text":"[Como comprar](/how-buy)",
+      "blockClass":"footer-links"
+    }
+  },
+  "rich-text#link02":{
+    "props":{
+      "text":"[Segurança](/security)",
+      "blockClass":"footer-links"
+    }
+  },  
+  "rich-text#link07":{
+    "props":{
+      "text":"[Sobre a empresa](/about-us)",
+      "blockClass":"footer-links"
+    }
+  },  
+
+
+
+
+  "flex-layout.row#footer-mobile2": {
     "children": ["flex-layout.col#footer-1-mobile"],
     "props": {
       "blockClass": "payment-methods",
@@ -227,7 +265,7 @@
   "flex-layout.col#footer-1-mobile": {
     "children": [
       "accepted-payment-methods",
-      "social-networks",
+      // "social-networks",
       "rich-text#footer-mobile"
     ],
     "props": {
@@ -237,17 +275,17 @@
       "rowGap": 4
     }
   },
-  "flex-layout.row#1-footer-mobile": {
-    "props": {
-      "paddingTop": 4,
-      "paddingBottom": 4
-    },
-    "children": ["vtex.menu@2.x:menu#footer-mobile"]
-  },
+  // "flex-layout.row#1-footer-mobile": {
+  //   "props": {
+  //     "paddingTop": 4,
+  //     "paddingBottom": 4
+  //   },
+  //   "children": ["vtex.menu@2.x:menu#footer-mobile"]
+  // },
   "rich-text#footer-mobile": {
     "props": {
-      "text": "All stock and product photos are from photos.icons8.com",
-      "blockClass": "footer"
+      "text": "**www.ideiavertical.com.br**",
+      "blockClass": "linkInfo-footer"
     }
   }
 }
