--- a/store/blocks/footer/footer.jsonc
+++ b/store/blocks/footer/footer.jsonc
@@ -251,84 +251,150 @@
 
 
 
-  // ----- MOBILE ----- //
-  "footer-layout.mobile": {
-    "children": [
-      "flex-layout.row#footer-mobile1",
-      "flex-layout.row#footer-mobile2"
-    ]
-  },
-  "flex-layout.row#footer-mobile1":{
-    "children":[
-      "flex-layout.col#linksFooter-left",
-      "flex-layout.col#linksFooter-right"
-    ]
-  },
-  "flex-layout.col#linksFooter-left":{
-    "children":[
-      "rich-text#link01",
-      "rich-text#link02"
-    ]
-  },
-  "flex-layout.col#linksFooter-right":{
-    "children":[
-      "rich-text#link07"
-    ]
-  },
-  "rich-text#link01":{
-    "props":{
-      "text":"[Como comprar](/how-buy)",
-      "blockClass":"footer-links"
-    }
-  },
-  "rich-text#link02":{
-    "props":{
-      "text":"[Segurança](/security)",
-      "blockClass":"footer-links"
-    }
-  },  
-  "rich-text#link07":{
-    "props":{
-      "text":"[Sobre a empresa](/about-us)",
-      "blockClass":"footer-links"
-    }
-  },  
-
-
-
-
-  "flex-layout.row#footer-mobile2": {
-    "children": ["flex-layout.col#footer-1-mobile"],
-    "props": {
-      "blockClass": "payment-methods",
-      "paddingTop": 4,
-      "paddingBottom": 4
-    }
-  },
-  "flex-layout.col#footer-1-mobile": {
-    "children": [
-      "accepted-payment-methods",
-      // "social-networks",
-      "rich-text#footer-mobile"
-    ],
-    "props": {
-      "blockClass": "payment-methods",
-      "paddingTop": 4,
-      "paddingBottom": 4,
-      "rowGap": 4
-    }
-  },
-  // "flex-layout.row#1-footer-mobile": {
-  //   "props": {
-  //     "paddingTop": 4,
-  //     "paddingBottom": 4
-  //   },
-  //   "children": ["vtex.menu@2.x:menu#footer-mobile"]
-  // },
-  "rich-text#footer-mobile": {
-    "props": {
-      "text": "**www.ideiavertical.com.br**",
-      "blockClass": "linkInfo-footer"
-    }
+// ----- MOBILE ----- //
+"footer-layout.mobile": {
+  "children": [
+    "flex-layout.row#footer-mobile1",
+    "flex-layout.row#footer-mobile2"
+  ]
+},
+"flex-layout.row#footer-mobile1":{
+  "children":[
+    "flex-layout.col#linksFooter-left",
+    "flex-layout.col#linksFooter-right"
+  ],
+  "props":{
+    "blockClass":"content-footer-intitucional"
   }
+},
+"flex-layout.col#linksFooter-left":{
+  "children":[
+    "rich-text#link01", // Como comprar
+    "rich-text#link02", // Segurança
+    "rich-text#link03", // Trocas e devoluções
+    "rich-text#link04", // Pagamento
+    "rich-text#link05", // Central de relacionamento
+    "rich-text#link06" // Meu cadastro
+  ]
+},
+"flex-layout.col#linksFooter-right":{
+  "children":[
+    "rich-text#link07", // Sobre a empresa
+    "rich-text#link08", // Política
+    "rich-text#link09", // Envio
+    "rich-text#link10", // Envie sua receita
+    "rich-text#link11", // Dúvidas
+    "rich-text#link12" // Pedidos
+  ]
+},
+"rich-text#link01":{
+  "props":{
+    "text":"[Como comprar](/how-buy)",
+    "blockClass":"footer-links"
+  }
+},
+"rich-text#link02":{
+  "props":{
+    "text":"[Segurança](/seguranca)",
+    "blockClass":"footer-links"
+  }
+},  
+"rich-text#link03":{
+  "props":{
+    "text":"[Trocas e devoluções](/trocas-devolucoes)",
+    "blockClass":"footer-links"
+  }
+}, 
+"rich-text#link04":{
+  "props":{
+    "text":"[Pagamento](/pagamento)",
+    "blockClass":"footer-links"
+  }
+},   
+"rich-text#link05":{
+  "props":{
+    "text":"[Central de relacionamento](/central-relacionamento)",
+    "blockClass":"footer-links"
+  }
+}, 
+"rich-text#link06":{
+  "props":{
+    "text":"[Meu cadastro](/login)",
+    "blockClass":"footer-links"
+  }
+},    
+"rich-text#link07":{
+  "props":{
+    "text":"[Sobre a empresa](/about-us)",
+    "blockClass":"footer-links"
+  }
+},  
+"rich-text#link08":{
+  "props":{
+    "text":"[Política](/politica)",
+    "blockClass":"footer-links"
+  }
+},   
+"rich-text#link09":{
+  "props":{
+    "text":"[Envio](/envio)",
+    "blockClass":"footer-links"
+  }
+},   
+"rich-text#link10":{
+  "props":{
+    "text":"[Envie sua receita](/enviar-receita)",
+    "blockClass":"footer-links"
+  }
+}, 
+"rich-text#link11":{
+  "props":{
+    "text":"[Dúvidas](/duvidas)",
+    "blockClass":"footer-links"
+  }
+},    
+"rich-text#link12":{
+  "props":{
+    "text":"[Meus pedidos](/login)",
+    "blockClass":"footer-links"
+  }
+},    
+
+
+
+
+"flex-layout.row#footer-mobile2": {
+  "children": ["flex-layout.col#footer-1-mobile"],
+  "props": {
+    "blockClass": "payment-methods",
+    "paddingTop": 4,
+    "paddingBottom": 4
+  }
+},
+"flex-layout.col#footer-1-mobile": {
+  "children": [
+    "accepted-payment-methods",
+    // "social-networks",
+    "rich-text#footer-mobile"
+  ],
+  "props": {
+    "blockClass": "payment-methods",
+    "paddingTop": 4,
+    "paddingBottom": 4,
+    "rowGap": 4
+  }
+},
+// "flex-layout.row#1-footer-mobile": {
+//   "props": {
+//     "paddingTop": 4,
+//     "paddingBottom": 4
+//   },
+//   "children": ["vtex.menu@2.x:menu#footer-mobile"]
+// },
+"rich-text#footer-mobile": {
+  "props": {
+    "text": "**www.ideiavertical.com.br**",
+    "blockClass": "linkInfo-footer"
+  }
+}
 }
