--- a/store/blocks/how-buy.jsonc
+++ b/store/blocks/how-buy.jsonc
@@ -1,5 +1,5 @@
 {
-    "store.custom#how-buy": {
+    "store.custom#default-institucional": {
       "blocks": [
         "flex-layout.row#intitucional"
       ]
