--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -3,6 +3,8 @@
     "children": [
       "flex-layout.row#product-breadcrumb",
       "flex-layout.row#product-main",
+      "share#default",
+      "product-description",
       "shelf.relatedProducts",
       "product-reviews",
       "product-questions-and-answers"
@@ -10,7 +12,8 @@
   },
   "flex-layout.row#product-breadcrumb": {
     "props": {
-      "marginTop": 4
+      "marginTop": 4,
+      "blockClass": "breadcrumbMain"
     },
     "children": ["breadcrumb"]
   },
@@ -21,7 +24,8 @@
       "marginTop": 4,
       "marginBottom": 7,
       "paddingTop": 7,
-      "paddingBottom": 7
+      "paddingBottom": 7,
+      "blockClass": "productAllInfo"
     },
     "children": [
       "flex-layout.col#product-image",
@@ -43,32 +47,35 @@
   "flex-layout.col#product-price": {
     "props": {
       "preventVerticalStretch": true,
-      "rowGap": 0
+      "rowGap": 0,
+      "blockClass": "mainPriceContainer"
     },
     "children": [
       "product-name",
       "product-rating-summary",
-      "product-price#product-details",
       "product-separator",
+      "product-price#product-details",
       "product-quantity",
       "product-identifier.product",
       "sku-selector",
       "flex-layout.row#buy-button",
-      "availability-subscriber",
-      "shipping-simulator",
-      "share#default"
+      "availability-subscriber"
+      //"shipping-simulator",
+      
     ]
   },
   "product-price#product-details": {
     "props": {
       "showInstallments": true,
-      "showSavings": true
+      "showSavings": true,
+      "blockClass": "productMainPrice"
     }
   },
   "flex-layout.row#buy-button": {
     "props": {
       "marginTop": 4,
-      "marginBottom": 7
+      "marginBottom": 7,
+      "blockClass": "mainBuyButton"
     },
     "children": ["buy-button"]
   },
@@ -91,7 +98,8 @@
       "showListPrice": true,
       "showLabels": true,
       "showInstallments": true,
-      "showSavings": true
+      "showSavings": true,
+      "blockClass":"mainPriceInfo"
     }
   },
 
@@ -100,6 +108,12 @@
       "showBrandName": true,
       "showSku": false,
       "showProductReference": false
+    }
+  },
+
+  "product-description":{
+    "props":{
+      "blockClass": "mainProductDescription"
     }
   }
 }
