Alterações na box de price sa página de produto, atualização no layout da página de resultado de busca

--- a/store/blocks/how-buy.jsonc
+++ b/store/blocks/how-buy.jsonc
@@ -6,6 +6,11 @@
     },
     "flex-layout.row#intitucional":{
         "children":[
+            "flex-layout.col#intitucionalCol"
+        ]
+    },
+    "flex-layout.col#intitucionalCol":{
+        "children":[
             "rich-text#title-intitutional",
             "rich-text#text-intitutional"
         ]
