--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -8,7 +8,10 @@
       "shelf.relatedProducts",
       "product-reviews",
       "product-questions-and-answers"
-    ]
+    ],
+    "props":{
+      "blockClass": "productBox"
+    }
   },
   "flex-layout.row#product-breadcrumb": {
     "props": {
